--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
   },
   "resolutions": {
     "cookie": "^0.7.0",
-    "nanoid": "^3.3.8"
+    "nanoid": "^3.3.8",
+    "esbuild": "^0.25.0"
   },
   "volta": {
     "node": "18.18.0"
